# CasinoRoyaleGame

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CRASH_FIX_SUMMARY.md  ENTITY_DESTRUCTION_BUG_FIX.md  IMPLEMENTATION_SUMMARY.md  NETWORKED_ENTITY_CREATION_USAGE.md  NETWORKED_PLAYER_IMPLEMENTATION.md  NETWORK_FLOW_DIAGRAM.md  README.md  THIRD_PARTY_NOTICES.md  build.ps1  compile_commands.json  run.ps1  run2.ps1  vcpkg.json
include/: component.hpp  component_manager.hpp  component_serialization.hpp  conductor.hpp  entity.hpp  entity_manager.hpp  help_functions.hpp  i_component_array.hpp  network_manager.hpp  packets.hpp  system_manager.hpp
include/components/: circle.hpp  entity_state.hpp  gravity.hpp  inventory.hpp  item.hpp  jump.hpp  network.hpp  pee.drawio  player.hpp  rigidbody.hpp  sprite.hpp  transform.hpp
include/systems/: basic_render_system.hpp  collision_detection_system.hpp  game_system.hpp  inventory_system.hpp  item_system.hpp  jump_system.hpp  network_system.hpp  physics_system.hpp  player_input_system.hpp
piskel/: GiantPoopyCoin.piskel
src/: component_manager.cpp  component_serialization.cpp  conductor.cpp  entity_manager.cpp  help_functions.cpp  i_component_array.cpp  main.cpp  network_manager.cpp  system_manager.cpp
src/systems/: basic_render_system.cpp  collision_detection_system.cpp  inventory_system.cpp  item_system.cpp  jump_system.cpp  network_system.cpp  physics_system.cpp  player_input_system.cpp
